# tryouts

./: .gitignore  .pre-commit-config.yaml  .pre-push-config.yaml  .rubocop.yml  .simplecov  CHANGES.txt  CLAUDE.md  Gemfile  LEARNING_SUMMARY.md  LICENSE.txt  README.md  README.rdoc  README.txt  Rakefile  TODO  VERSION.yml  mt-demo.rb  parser.dylib  rspec_class_based_syntax.rb  specs.watchr  syntax_error_test_try.rb  test_failing.rb  test_generator.rb  test_prism_parser.rb  test_setup_execution.rb  test_syntax_error.rb  tryouts.gemspec
.github/: dependabot.yml
doc/: debug_teardown.rb  test_complex_try.rb  test_context_modes.rb  test_failing.rb  test_fails_mode.rb  test_prism_parser.rb  test_setup_execution.rb  test_setup_execution1.rb  test_setup_execution2.rb
docs/: about-shared-or-fresh-context.md  agent_guide.md  agent_output_modes_validation.md  topa-algorithms.md  topa-output-examples.md  topa-reference-code.md
examples/: debug_teardown.rb  test_context_modes.rb  test_failing.rb  test_setup_execution1.rb
exe/: try  tryouts
experiments/: ast_exploration.rb  parser_comparison.rb
lib/: sysinfo.rb  tryouts-v2.rb  tryouts.rb
src/: grammar.json  node-types.json  parser.c
test/: console_try.rb  step1_tryouts.rb  step3_tryouts.rb  step4_tryouts.rb  test_helper.rb  test_tryouts.rb  tryouts_try.rb
tree-sitter/: package.json  parser.dylib  pyproject.toml  tree-sitter.json
tree-sitter-grammar/: Cargo.toml  (+14 more)
tree-sitter/queries/: playground.txt
tree-sitter/src/: grammar.json
tree-sitter/test/: syntax-3.0-notes.txt
tree-sitter/test/corpus/: basic.txt
(+282 files in other folders)
